2007-10-23  Jeff Hobbs  <jeffh@ActiveState.com>

	*** Tagged tea-3-branch to start TEA 4 development on HEAD ***

	* Makefile.in: separate PKG_ENV parts from TCLSH/WISH_ENV parts to
	better allow 8.4 and 8.5 core variant testing.

2007-05-11  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/nmakehlp.c:  Added support for simple substitution of an 
	* win/makefile.vc: input file. This permits us to make use of
	pkgIndex.tcl.in style files without resorting to use of the tclsh
	we are building against -- when compiling for a foreign target (eg
	AMD64 from a ix86 host) we may not be able to run the
	tclsh. nmakehlp however must always be a native executable.

2007-05-03  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/makefile.vc: Round of updating to synch up with the Tcl
	* win/rules.vc:    core version of this build system.
	* win/nmakehlp.c:
	* win/sample.rc:   Added sample resource file.

2007-02-09  Jeff Hobbs  <jeffh@ActiveState.com>

	* Makefile.in, configure.in (CLEANFILES): correct cleanup handling
	of pkgIndex.tcl and clarify when it should be in CLEANFILES,
	CONFIG_CLEAN_FILES and/or BINARIES. [Bug 1655088]
	* configure: Updated with TEA 3.6 changes

2006-11-26  Daniel Steffen  <das@users.sourceforge.net>

	* Makefile.in: add datarootdir for autoconf-2.60.

	* configure: autoconf-2.59 for TEA updates.

2006-09-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/nmakehlp.c:  Updated for building extensions with msvc8,
	* win/makefile.vc: support for varying compiler options for
	* win/rules.vc:    msvc6,7,8.

2006-01-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* configure.in, configure: update to TEA 3.5

2006-01-10  Daniel Steffen  <das@users.sourceforge.net>

	* generic/sample.c:
	* generic/tclsample.c: fix gcc4 warnings.

	* configure: autoconf-2.59 for TEA updates.

2005-12-01  Daniel Steffen  <das@users.sourceforge.net>

	* configure: autoconf-2.59 for TEA updates.

2005-11-29  Jeff Hobbs  <jeffh@ActiveState.com>
